--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
 		<nav id="games-nav" class="navbar navbar-inverse">
 			<div class="container">
-				<div class="row">
 
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<!-- <div class="navbar-header">
@@ -54,27 +53,34 @@
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
-						<ul class="nav navbar-nav navbar-games">
-							<li class="active navbar-games-item"><a href="#" class="navbar-games-link">Лобби<span class="sr-only">(current)</span></a></li>
-							<li class="navbar-games-item"><a href="#" class="navbar-games-link">Слоты</a></li>
-							<li class="navbar-games-item"><a href="#" class="navbar-games-link">Джекпоты</a></li>
-							<li class="navbar-games-item"><a href="#" class="navbar-games-link">Настольные</a></li>
-							<li class="navbar-games-item"><a href="#" class="navbar-games-link">Live диллер</a></li>
-						</ul>
 
-						<ul class="nav navbar-nav navbar-right navbar-provider">
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Провайдеры <span class="caret"></span></a>
-								<ul class="dropdown-menu dropdown-menu-providers">
-									<li><a href="#">NetEnt</a></li>
-									<li><a href="#">Amatic</a></li>
-									<li><a href="#">Ezugi</a></li>
-									<li><a href="#">Softswiss</a></li>
-								</ul>
-							</li>
-						</ul>
+						<div id="nav-games" class="nav-games">
+
+							<ul class="nav navbar-nav navbar-games">
+								<li class="active navbar-games-item"><a href="#" class="navbar-games-link">Лобби<span class="sr-only">(current)</span></a></li>
+								<li class="navbar-games-item"><a href="#" class="navbar-games-link">Слоты</a></li>
+								<li class="navbar-games-item"><a href="#" class="navbar-games-link">Джекпоты</a></li>
+								<li class="navbar-games-item"><a href="#" class="navbar-games-link">Настольные</a></li>
+								<li class="navbar-games-item"><a href="#" class="navbar-games-link">Live диллер</a></li>
+							</ul>
+						</div>
+
+						<div id="nav-providers" class="nav-providers">
+							<ul class="nav navbar-nav navbar-right navbar-provider">
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Провайдеры <span class="caret"></span></a>
+									<ul class="dropdown-menu dropdown-menu-providers">
+										<li><a href="#">NetEnt</a></li>
+										<li><a href="#">Amatic</a></li>
+										<li><a href="#">Ezugi</a></li>
+										<li><a href="#">Softswiss</a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+
 					<!-- </div> --><!-- /.navbar-collapse -->
-				</div>
+
 			</div><!-- /.container -->
 		</nav>
 
