--- a/_header.html
+++ b/_header.html
@@ -16,6 +16,7 @@
 						</button>
 						<a class="navbar-brand ds-logo-wrap" href="index.html">
 							<img src="img/logo.png" alt="darkslot-logo" class="ds-logo">
+							<img src="img/favicon.png" alt="darkslot-logo" class="ds-logo">
 						</a>
 					</div>
 
