--- a/_header.html
+++ b/_header.html
@@ -100,7 +100,7 @@
 					<div class="collapse navbar-collapse" id="header-search-collapse">
 						<ul class="nav navbar-nav">
 							<form class="navbar-search pull-left">
-								<input type="text" class="search-query" placeholder="Search">
+								<input type="search" class="search-query form-control" placeholder="Search">
 							</form>
 						</ul>
 					</div>
