level-up modals adapted

--- a/_modals.html
+++ b/_modals.html
@@ -274,7 +274,7 @@
                 <br>
                 <span class="level-details__bottom-text">Вы должны набрать <span>30 000 очков</span></span>
               </div>
-              <a href="levels.html" class="level-details__button">Подробнее об уровнях</a>
+              <a href="levels.html" class="btn btn-danger btn-big" role="button">Подробнее об уровнях</a>
             </div>
           </div>
         </div>
@@ -335,7 +335,7 @@
                 <br>
                 <span class="level-details__bottom-text">Вы должны набрать <span>100 000 очков</span></span>
               </div>
-              <a href="levels.html" class="level-details__button">Подробнее об уровнях</a>
+              <a href="levels.html" class="btn btn-danger btn-big" role="button">Подробнее об уровнях</a>
             </div>
           </div>
         </div>
