--- a/_footer-wrapper.html
+++ b/_footer-wrapper.html
@@ -34,12 +34,11 @@
           <div class="col-md-4 col-sm-4 col-xs-4">
             <h2 class="games__header">О нас</h2>
             <ul class="games__list">
-              <li class="games__item games__item--policy">Политика конфиденциальности</li>
-              <li class="games__item games__item--rules">Положения и условия</li>
-              <li class="games__item games__item--support">Поддержка</li>
+              <li class="games__item games__item--policy" data-toggle="modal" data-target="#modalPolicy">Политика конфиденциальности</li>
+              <li class="games__item games__item--rules" data-toggle="modal" data-target="#modalRules">Положения и условия</li>
+              <li class="games__item games__item--support" data-toggle="modal" data-target="#modalSupport">Поддержка</li>
               <li class="games__item"><a href="partners.html">Партнерам</a></li>
               <li class="games__item"><a href="about.html">О Darkslot</a></li>
-              <li class="games__item"><a href="blog.html">Блог</a></li>
             </ul>
           </div>
         </div>
