--- a/bonus.html
+++ b/bonus.html
@@ -113,7 +113,7 @@
 
 				<div class="row">
 					<div class="col-xs-5 text-center">
-						<span class="cashback__not-all hidden-xs">Это еще не все</span>
+						<span class="cashback__not-all">Это еще не все</span>
 						<button class="btn btn-danger btn-wide">Депозит сейчас</button>
 					</div>
 
