--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
 
 	<script src="bootstrap/assets/javascripts/bootstrap.js"></script>
 	<script src="js/jquery.nicescroll.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script>
 
 	<script type="text/javascript" src="js/main.js"></script>
 
