new partners logos, fixed modals

--- a/_footer-wrapper.html
+++ b/_footer-wrapper.html
@@ -63,23 +63,23 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="partners__images">
-          <img src="img/partners/1_visa.jpg" alt="visa">
-          <img src="img/partners/2_mastercard.jpg" alt="mastercard">
-          <img src="img/partners/3_skrill.jpg" alt="skrill">
-          <img src="img/partners/4_netever.jpg" alt="netever">
-          <img src="img/partners/5_paysafecard.jpg" alt="pay safe card">
+          <img src="img/partners/1_visa.png" alt="visa">
+          <img src="img/partners/2_mastercard.png" alt="mastercard">
+          <img src="img/partners/3_skrill.png" alt="skrill">
+          <img src="img/partners/4_netever.png" alt="netever">
+          <img src="img/partners/5_paysafecard.png" alt="pay safe card">
           <img src="img/partners/6_trustly.svg" alt="trustly">
           <img src="img/partners/7_zimpler.svg" alt="zimpler">
-          <img src="img/partners/8_responsivegaming.jpg" alt="responsive gaming">
-          <img src="img/partners/9_itechlab.jpg" alt="itech lab">
-          <img src="img/partners/10_safesecure.jpg" alt="safe secure">
+          <img src="img/partners/8_responsivegaming.png" alt="responsive gaming">
+          <img src="img/partners/9_itechlab.png" alt="itech lab">
+          <img src="img/partners/10_safesecure.png" alt="safe secure">
           <img src="img/partners/11_sealofapproval.png" alt="seal of approval">
-          <img src="img/partners/13_softswiss.jpg" alt="softswiss">
+          <img src="img/partners/13_softswiss.png" alt="softswiss">
           <img src="img/partners/14_netent.svg" alt="netent">
           <img src="img/partners/15_amatic.svg" alt="amatic">
           <img src="img/partners/16_ezugi.svg" alt="ezugi">
           <img src="img/partners/17_bitcoin.png" alt="bitcoin">
-          <img src="img/partners/18.jpg" alt="18+">
+          <img src="img/partners/18.png" alt="18+">
         </div>
       </div>
     </div>
