--- a/_modals.html
+++ b/_modals.html
@@ -119,7 +119,7 @@
 </div>
 
 <div class="modal fade modalRecovery" id="modalRecovery" tabindex="-1" role="dialog" aria-labelledby="modalRecoveryLabel">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-centered" role="document">
     <div class="ds-fl-content">
       <div class="ds-modal-img-wrap">
         <img src="" alt="" class="ds-modal-img">
@@ -132,7 +132,7 @@
         </div>
         <div class="modal-body">
           <form action="#" class="modal-form modal-form--recovery">
-            <p class="modal-form__text">Введите свой электронный адрес, и Вам будут высланы инструкции по замене пароля. <br>По дальнейшим вопросам Вы можете связаться с нами через страницу <span class="modal-form__support">поддержка</span></p>
+            <p class="modal-form__text">Введите свой электронный адрес, и Вам будут высланы инструкции по замене пароля. <br>По дальнейшим вопросам Вы можете связаться с нами через страницу <span class="modal-form__support" data-toggle="modal" data-target="#modalSupport">поддержка</span></p>
 
             <input type="email" class="modal-form__input" placeholder="Email">
             <input type="submit" class="modal-form__button" value="Восстановить пароль" id="forgot-button" data-toggle="modal" data-target="#modalNewPass">
@@ -148,7 +148,7 @@
 </div>
 
 <div class="modal fade modalUnlock" id="modalUnlock" tabindex="-1" role="dialog" aria-labelledby="modalUnlockLabel">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-centered" role="document">
     <div class="ds-fl-content">
       <div class="ds-modal-img-wrap">
         <img src="" alt="" class="ds-modal-img">
@@ -172,7 +172,7 @@
 </div>
 
 <div class="modal fade modalConfirm" id="modalConfirm" tabindex="-1" role="dialog" aria-labelledby="modalConfirmLabel">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-centered" role="document">
     <div class="ds-fl-content">
       <div class="ds-modal-img-wrap">
         <img src="" alt="" class="ds-modal-img">
@@ -195,7 +195,7 @@
 </div>
 
 <div class="modal fade modalNewPass" id="modalNewPass" tabindex="-1" role="dialog" aria-labelledby="modalNewPassLabel">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-centered" role="document">
     <div class="ds-fl-content">
       <div class="ds-modal-img-wrap">
         <img src="" alt="" class="ds-modal-img">
