--- a/_header.html
+++ b/_header.html
@@ -98,7 +98,7 @@
 						</ul>
 					</div> <!-- /.navbar-collapse -->
 
-					<div class="collapse navbar-collapse" id="header-search-collapse">
+					<div class="collapse navbar-collapse collapse-search" id="header-search-collapse">
 						<ul class="nav navbar-nav">
 							<form class="navbar-search pull-left">
 								<input type="search" class="search-query form-control" placeholder="Search">
