footer, banners, some bg, tabs

--- a/day-slot.html
+++ b/day-slot.html
@@ -28,7 +28,9 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<img src="img/slider-images/day-slot.jpg" alt="slot of day" class="day-slot-image__inner">
+				<div class="day-slot-image">
+					<img src="img/slider-images/day-slot.jpg" alt="slot of day" class="day-slot-image__inner">
+				</div>
 			</div>
 		</div>
 
