--- a/free-spins.html
+++ b/free-spins.html
@@ -18,7 +18,7 @@
 	<!-- Header insertion -->
 	<script>
 		$(document).ready(function(){
-		 	$('#ds-header').load('./_header.html');
+			$('#ds-header').load('./_header.html');
 		});
 	</script>
 	<div id="ds-header"></div>
@@ -28,7 +28,9 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<img src="img/slider-images/free-spins.png" alt="slot of day" class="free-spins-image__inner">
+				<div class="free-spins-image">
+					<img src="img/slider-images/free-spins.png" alt="slot of day" class="free-spins-image__inner">
+				</div>
 			</div>
 		</div>
 
@@ -98,7 +100,7 @@
 		<!-- Section-Registration insertion -->
 		<script>
 			$(document).ready(function(){
-			 	$('#ds-section-registration').load('./_section-registration.html');
+				$('#ds-section-registration').load('./_section-registration.html');
 			});
 		</script>
 		<div id="ds-section-registration"></div>
@@ -107,7 +109,7 @@
 		<!-- Footer-Wrapper insertion -->
 		<script>
 			$(document).ready(function(){
-			 	$('#ds-footer-wrapper').load('./_footer-wrapper.html');
+				$('#ds-footer-wrapper').load('./_footer-wrapper.html');
 			});
 		</script>
 		<div id="ds-footer-wrapper"></div>
