--- a/_modals.html
+++ b/_modals.html
@@ -160,7 +160,7 @@
         </div>
         <div class="modal-body">
           <form action="#" class="modal-form modal-form--recovery">
-            <p class="modal-form__text">Если ваша учётная запись заблокирована, оставьте свой email-адрес, и мы вышлем на него инструкции по разблокированию. <br>По дальнейшим вопросам Вы можете связаться с нами через страницу <span class="modal-form__support">поддержка</span></p>
+            <p class="modal-form__text">Если ваша учётная запись заблокирована, оставьте свой email-адрес, и мы вышлем на него инструкции по разблокированию. <br>По дальнейшим вопросам Вы можете связаться с нами через страницу <span class="modal-form__support" data-toggle="modal" data-target="#modalSupport">поддержка</span></p>
 
             <input type="email" class="modal-form__input" placeholder="Email">
             <input type="submit" class="modal-form__button" value="Переслать инструкции для разблокировки">
