--- a/bonus.html
+++ b/bonus.html
@@ -155,7 +155,7 @@
 
 					<div class="col-sm-12">
 						<div class="bonus-more__button-wrapper">
-							<button class="btn btn-danger btn-wide" id="bonus-rules-button">Узнать больше</button>
+							<button class="btn btn-danger btn-wide" data-toggle="modal" data-target="#modalRules">Узнать больше</button>
 						</div>
 					</div>
 				</div>
