--- a/partners.html
+++ b/partners.html
@@ -136,7 +136,7 @@
 
 				<div class="row">
 					<div class="incomes__button-wrapper">
-						<button class="btn btn-danger btn-wide">Стать партнером</button>
+						<button class="btn btn-danger btn-wide" data-toggle="modal" data-target="#modalReg">Стать партнером</button>
 					</div>
 				</div>
 			</div>
