--- a/about.html
+++ b/about.html
@@ -15,106 +15,14 @@
 </head>
 <body>
 
-	<header class="header">
-		<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar-collapse" aria-expanded="false">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-							<a class="navbar-brand ds-logo-wrap" href="index.html">
-								<img src="img/logo.png" alt="darkslot-logo" class="ds-logo">
-							</a>
-						</div>
-
-						<div class="collapse navbar-collapse" id="header-navbar-collapse">
-							<ul class="nav navbar-nav">
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Игры <span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a href="#">Лобби</a></li>
-										<li><a href="#">Слоты</a></li>
-										<li><a href="#">Джекпоты</a></li>
-										<li><a href="#">Настольные</a></li>
-										<li><a href="#">Live диллер</a></li>
-									</ul>
-								</li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Акции <span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a href="bonus.html">Приветственный бонус</a></li>
-										<li><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
-										<li><a href="reload-bonus.html">Reload бонус</a></li>
-										<li><a href="everyweek-cashback.html">Кэшбек</a></li>
-										<li><a href="everyweek-cashback.html#live-casino">Live Casino Cashback</a></li>
-										<li><a href="day-slot.html">Слот дня во вторник</a></li>
-										<li><a href="free-spins.html">Фриспины в четверг</a></li>
-										<li><a href="tournament.html">Darkslot турнир</a></li>
-										<li><a href="levels.html">Уровни игроков</a></li>
-									</ul>
-								</li>
-								<li><a href="#" data-toggle="modal" data-target="#modalSupport">Поддержка</a></li>
-								<li><a href="partners.html">Партнерам</a></li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">О нас <span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a href="about.html">О DarkSlot</a></li>
-										<li><a href="#" class="main-nav__dropdown-rules" data-toggle="modal" data-target="#modalRules">Положения и условия</a></li>
-										<li><a href="#" class="main-nav__dropdown-policy" data-toggle="modal" data-target="#modalPolicy">Политика конфиденциальности</a></li>
-									</ul>
-								</li>
-							</ul>
-
-							<ul class="nav navbar-nav navbar-right header__user">
-								<li class="header__auth hidden">
-									<button type="button" class="btn btn-danger " data-toggle="modal" data-target="#modalReg">Регистрация</button>
-									<button type="button" class="btn btn-secondary " data-toggle="modal" data-target="#modalSignIn">Вход</button>
-								</li>
-
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-										<span class="header__user-image">
-											<img src="img/user-icon.png" alt="user">
-											<span>2</span>
-										</span> Guest <span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu">
-										<li><a href="#">list item</a></li>
-										<li><a href="#">list item</a></li>
-										<li><a href="#">list item</a></li>
-										<li><a href="#">list item</a></li>
-										<li><a href="#">list item</a></li>
-										<li><a href="#">list item</a></li>
-									</ul>
-								</li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-										<span class="header__user-image">
-											<img src="img/user-money.png" alt="money">
-										</span> 200 BTC <span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu">
-										<li><a href="#">BTC</a></li>
-										<li><a href="#">EUR</a></li>
-										<li><a href="#">USD</a></li>
-										<li><a href="#">RUB</a></li>
-									</ul>
-								</li>
-								<li class="header__deposit-btn"><button type="button" class="btn btn-secondary">Депозит</button></li>
-
-							</ul>
-						</div><!-- /.navbar-collapse -->
-
-					</div>
-				</div>
-			</div>
-		</nav>
-	</header>
+	<!-- Header insertion -->
+	<script>
+		$(document).ready(function(){
+		 	$('#ds-header').load('./_header.html');
+		});
+	</script>
+	<div id="ds-header"></div>
+	<!-- End Header insertion -->
 
 	<div class="main-wrapper">
 
