many little fixes

--- a/_modals.html
+++ b/_modals.html
@@ -229,7 +229,7 @@
         <img src="" alt="" class="ds-modal-img">
       </div>
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header modal-header-level">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title" id="modalSecondLevelLabel">
             <span class="level-up-header-wrap">
@@ -244,7 +244,7 @@
             </span>
           </h4>
         </div>
-        <div class="modal-body">
+        <div class="modal-body modal-body-level">
           <div class="level-up">
 
             <span class="level-up__up-text">Вам доступно:</span>
