--- a/_header.html
+++ b/_header.html
@@ -2,7 +2,7 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<!-- Класс user-unAuthorized заменить на user-authorized для состояния авторизованного пользователя -->
-			<div class="header-wrap user-authorized">
+			<div class="header-wrap user-unAuthorized">
 
 					<div class="navbar-header">
 						<button style="float: none;" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar-collapse" aria-expanded="false">
