--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 								<div class="deposites__header">
 									<p>Заработай 45% + до 1000$ за каждый уровень! Уникальной партнерской программы!</p>
 								</div>
-								<a href="partners.html" class="btn btn-danger btn-big">Стать партнером</a>
+								<a href="partners.html" class="btn btn-danger btn-big" data-toggle="modal" data-target="#modalReg">Стать партнером</a>
 							</div>
 
 							<div class="deposites__image-wrapper">
