created new pages, changed banners on pages

--- a/_header.html
+++ b/_header.html
@@ -87,10 +87,10 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Акции <span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a href="bonus.html">Приветственный бонус</a></li>
-									<li><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
+									<li><a href="vip-bonus.html">VIP Bonus</a></li>
 									<li><a href="reload-bonus.html">Reload бонус</a></li>
 									<li><a href="everyweek-cashback.html">Кэшбек</a></li>
-									<li><a href="everyweek-cashback.html#live-casino">Live Casino Cashback</a></li>
+									<li><a href="live-casino.html">Live Casino Cashback</a></li>
 									<li><a href="day-slot.html">Слот дня во вторник</a></li>
 									<li><a href="free-spins.html">Фриспины в четверг</a></li>
 									<li><a href="tournament.html">Darkslot турнир</a></li>
