--- a/about.html
+++ b/about.html
@@ -108,14 +108,14 @@
 			</div>
 		</div>
 
-		<!-- Carousel insertion -->
+		<!-- Section-Registration insertion -->
 		<script>
 			$(document).ready(function(){
-				$('#ds-carousel').load('./_carousel.html');
+			 	$('#ds-section-registration').load('./_section-registration.html');
 			});
 		</script>
-		<div id="ds-carousel"></div>
-		<!-- End Carousel insertion -->
+		<div id="ds-section-registration"></div>
+		<!-- End Section-Registration insertion -->
 
 		<!-- Footer-Wrapper insertion -->
 		<script>
