--- a/vip-bonus.html
+++ b/vip-bonus.html
@@ -26,332 +26,73 @@
 
 	<div class="main-wrapper">
 
-		<div class="tournament-bg">
-
-			<section class="tournament">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12">
-							<h1 class="tournament__header">Турнир <span>1000$</span> каждую пятницу</h1>
-						</div>
-						<div class="col-sm-12">
-							<div class="tournament__text-wrapper">
-								<h4 class="tournament__text-header">Правила:</h4>
-								<p class="tournament__text">Турнир проводится по пятницам с 01:00 до 23:00 (МСК). В турнире принимают участие все клиенты Казино, которые сделали депозит в пятницу после 01:00(МСК) В турнире участвуют все игры из разделов «Слоты». Победители турнира определяются автоматически, исходя из самого крупного значения среднего выигрыша за время турнира.</p>
-								<a href="#" role="button" class="ds-link" data-toggle="modal" data-target="#modalRules">Полные правила</a>
-							</div>
+		<div class="cashback cashback--background">
+			<div class="container">
+				<div class="row vip-bonus">
+					<div class="col-xs-12 col-sm-6">
+						<div class="cashback__text-wrapper">
+							<img src="img/vip-bonus-header.png" alt="" class="cashback__header">
+							<span class="cashback__text">Получите 100% бонусом при депозите 1000$</span>
 						</div>
 					</div>
 
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="conditions conditions--tournament">
-
-								<div class="row">
-									<div class="col-sm-4">
-										<div class="condition">
-											<span class="condition__description">Для участия достаточно внести внести vинимальный депозит в пятницу после 01:00(Мск ). И играть в слотах и автоматах</span>
-										</div>
-									</div>
-
-									<div class="col-sm-4">
-										<div class="condition">
-											<span class="condition__description">Ваше место в турнире зависит от ваших выигрышей поделённых на кол-во раундов (спинов)</span>
-										</div>
-									</div>
-
-									<div class="col-sm-4">
-										<div class="condition">
-											<span class="condition__description">Минимальное кол-во раундов для участия - 500</span>
-										</div>
-									</div>
-								</div>
-
-							</div>
+					<div class="col-xs-12 col-sm-offset-1 col-sm-5 text-right">
+						<div class="cashback-code">
+							<span class="cashback-code__header">Во время депозита используйте VIP-код</span>
+							<span class="cashback-code__code">VIP1000</span>
 						</div>
 					</div>
 				</div>
-			</section>
 
-			<section class="tables">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12">
-							<h3 class="tables__header">Места распределяются согласно таблице</h3>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-6">
-							<ul class="prizes-table__column prizes-table__column--left">
-								<li class="prizes-table__item">
-									<div class="prizes-table__place">1 место</div>
-									<div class="prizes-table__amount">300$</div>
-								</li>
-								<li class="prizes-table__item">
-									<div class="prizes-table__place">2 место</div>
-									<div class="prizes-table__amount">150$</div>
-								</li>
-								<li class="prizes-table__item">
-									<div class="prizes-table__place">3 место</div>
-									<div class="prizes-table__amount">100$</div>
-								</li>
-							</ul>
-						</div>
-
-						<div class="col-sm-6">
-							<ul class="prizes-table__column prizes-table__column--right">
-								<li class="prizes-table__item">
-									<div class="prizes-table__place">4 место</div>
-									<div class="prizes-table__amount">40$</div>
-								</li>
-								<li class="prizes-table__item">
-									<div class="prizes-table__place">5-9 место</div>
-									<div class="prizes-table__amount">20$</div>
-								</li>
-								<li class="prizes-table__item">
-									<div class="prizes-table__place">10-30 место</div>
-									<div class="prizes-table__amount">15$</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="tables__condition-wrapper">
-								<p class="tables__condition">Все выигрыши требуют отыгрыша х3, в течении 30-ти дней после его начисления.</p>
-							</div>
-						</div>
+				<div class="row">
+					<div class="col-xs-5 text-center">
+						<span class="cashback__not-all">Это еще не все</span>
+						<button class="btn btn-danger btn-wide">Депозит сейчас</button>
 					</div>
 
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="places-tournament">
-								<h2 class="places-tournament__header">Таблица <span>победителей</span></h2>
-
-								<div class="row">
-									<div class="col-sm-12 col-md-6">
-										<table class="places-table">
-											<colgroup>
-												<col width="10%">
-											  <col width="30%">
-												<col width="30%">
-											  <col width="30%">
-											</colgroup>
-
-											<tr class="places-table__row-header">
-												<td class="places-table__cell-header">Место</td>
-												<td class="places-table__cell-header">Приз</td>
-												<td class="places-table__cell-header">Счастливчик</td>
-												<td class="places-table__cell-header">Баллы</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--first">1</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--second">2</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--third">3</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--fourth">4</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--fifth">5</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--fifth">6</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--fifth">7</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--fifth">8</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell places-table__cell--fifth">9</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">10</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">11</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">12</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">13</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">14</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">15</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-										</table>
-									</div>
-
-									<div class="col-sm-12 col-md-6">
-										<table class="places-table">
-											<colgroup>
-												<col width="10%">
-											  <col width="30%">
-												<col width="30%">
-											  <col width="30%">
-											</colgroup>
-											<tr class="places-table__row-header hidden-sm hidden-xs">
-												<td class="places-table__cell-header">Место</td>
-												<td class="places-table__cell-header">Приз</td>
-												<td class="places-table__cell-header">Счастливчик</td>
-												<td class="places-table__cell-header">Баллы</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">16</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">17</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">18</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">19</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">20</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">21</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">22</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">23</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">24</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">25</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">26</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">27</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">28</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">29</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-											<tr class="places-table__row">
-												<td class="places-table__cell">30</td>
-												<td class="places-table__cell">100 000$</td>
-												<td class="places-table__cell">nickname</td>
-												<td class="places-table__cell">77777.7</td>
-											</tr>
-										</table>
-									</div>
-								</div>
-							</div>
-
-						</div>
+					<div class="col-xs-6">
+						<p class="cashback__advantages">А так же вы получите <span class="cashback__red">3й уровень,</span> который даст вам массу <span class="cashback__dashed">преимуществ</span>
+							<a href="levels.html" class="cashback__question">?</a>
+						</p>
 					</div>
-
 				</div>
-			</section>
+			</div>
+		</div>
 
+		<div class="bonus-more">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="condition">
+							<span class="condition__description">Отыгрывать бонус можно только в слотах.</span>
+						</div>
+					</div>
+
+					<div class="col-sm-4">
+						<div class="condition">
+							<span class="condition__description">Максимальная ставка при это не должна превышать 5$(300р.)</span>
+						</div>
+					</div>
+
+					<div class="col-sm-4">
+						<div class="condition">
+							<span class="condition__description">Требования по отыгрышу бонусов(вейджер) х40</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-sm-12">
+						<p class="bonus-more__text">Так же к этому предложению действуют стандартные положения и условия </p>
+					</div>
+
+					<div class="col-sm-12">
+						<div class="bonus-more__button-wrapper">
+							<button class="btn btn-danger btn-wide" data-toggle="modal" data-target="#modalRules">Узнать больше</button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<!-- Section-Registration insertion -->
