--- a/reload-bonus.html
+++ b/reload-bonus.html
@@ -122,14 +122,14 @@
 			</div>
 		</section>
 
-		<!-- Carousel insertion -->
+		<!-- Section-Registration insertion -->
 		<script>
 			$(document).ready(function(){
-			 	$('#ds-carousel').load('./_carousel.html');
+			 	$('#ds-section-registration').load('./_section-registration.html');
 			});
 		</script>
-		<div id="ds-carousel"></div>
-		<!-- End Carousel insertion -->
+		<div id="ds-section-registration"></div>
+		<!-- End Section-Registration insertion -->
 
 		<!-- Footer-Wrapper insertion -->
 		<script>
